static/psi4manual/1.4.0/_sources/autodir_options_c/module__scf.rst.txt
.. _`apdx:scf`:


SCF
===

Performs self consistent field (Hartree-Fock and Density Functional Theory) computations. These are the starting points for most computations, so this code is called in most cases.

.. toctree::
   :hidden:
   :glob:

   scf__*


.. _`apdx:scfgeneralwavefunctioninfo`:

General Wavefunction Info 
_________________________

.. include:: scf__basis.rst
.. include:: scf__cholesky_tolerance.rst
.. include:: scf__df_basis_scf.rst
.. include:: scf__df_scf_guess.rst
.. include:: scf__guess.rst
.. include:: scf__guess_mix.rst
.. include:: scf__guess_persist.rst
.. include:: scf__ints_tolerance.rst
.. include:: scf__max_mem_buf.rst
.. include:: scf__molden_write.rst
.. include:: scf__orbitals_write.rst
.. include:: scf__print_basis.rst
.. include:: scf__print_mos.rst
.. include:: scf__qchf.rst
.. include:: scf__reference.rst
.. include:: scf__save_jk.rst
.. include:: scf__scf_mem_safety_factor.rst
.. include:: scf__scf_properties.rst
.. include:: scf__s_cholesky_tolerance.rst
.. include:: scf__s_orthogonalization.rst
.. include:: scf__s_tolerance.rst

.. _`apdx:scfconvergencecontrolstabilization`:

Convergence Control/Stabilization 
_________________________________

.. include:: scf__basis_guess.rst
.. include:: scf__damping_convergence.rst
.. include:: scf__damping_percentage.rst
.. include:: scf__df_basis_guess.rst
.. include:: scf__diis.rst
.. include:: scf__diis_max_vecs.rst
.. include:: scf__diis_min_vecs.rst
.. include:: scf__diis_rms_error.rst
.. include:: scf__diis_start.rst
.. include:: scf__d_convergence.rst
.. include:: scf__e_convergence.rst
.. include:: scf__fail_on_maxiter.rst
.. include:: scf__level_shift.rst
.. include:: scf__level_shift_cutoff.rst
.. include:: scf__maxiter.rst
.. include:: scf__mom_occ.rst
.. include:: scf__mom_start.rst
.. include:: scf__mom_vir.rst
.. include:: scf__soscf.rst
.. include:: scf__soscf_conv.rst
.. include:: scf__soscf_max_iter.rst
.. include:: scf__soscf_min_iter.rst
.. include:: scf__soscf_print.rst
.. include:: scf__soscf_start_convergence.rst
.. include:: scf__stability_analysis.rst

.. _`apdx:scffractionaloccupationuhfuks`:

Fractional Occupation UHF/UKS 
_____________________________

.. include:: scf__frac_diis.rst
.. include:: scf__frac_load.rst
.. include:: scf__frac_occ.rst
.. include:: scf__frac_renormalize.rst
.. include:: scf__frac_start.rst
.. include:: scf__frac_val.rst

.. _`apdx:scfenvironmentaleffects`:

Environmental Effects 
_____________________

.. include:: scf__extern.rst
.. include:: scf__onepot_grid_read.rst
.. include:: scf__perturb_dipole.rst
.. include:: scf__perturb_h.rst
.. include:: scf__perturb_magnitude.rst
.. include:: scf__perturb_with.rst
.. include:: scf__phi_points.rst
.. include:: scf__radius.rst
.. include:: scf__r_points.rst
.. include:: scf__theta_points.rst
.. include:: scf__thickness.rst

.. _`apdx:scfdfscfalgorithm`:

DFSCF Algorithm 
_______________

.. include:: scf__df_bump_r0.rst
.. include:: scf__df_bump_r1.rst
.. include:: scf__df_domains.rst
.. include:: scf__df_ints_num_threads.rst
.. include:: scf__df_metric.rst
.. include:: scf__df_theta.rst

.. _`apdx:scfsadguessalgorithm`:

SAD Guess Algorithm 
___________________

.. include:: scf__sad_d_convergence.rst
.. include:: scf__sad_e_convergence.rst

.. _`apdx:scfdft`:

DFT 
___

.. include:: scf__dft_alpha.rst
.. include:: scf__dft_alpha_c.rst
.. include:: scf__dft_basis_tolerance.rst
.. include:: scf__dft_bs_radius_alpha.rst
.. include:: scf__dft_dispersion_parameters.rst
.. include:: scf__dft_grac_alpha.rst
.. include:: scf__dft_grac_beta.rst
.. include:: scf__dft_grac_shift.rst
.. include:: scf__dft_nuclear_scheme.rst
.. include:: scf__dft_omega.rst
.. include:: scf__dft_omega_c.rst
.. include:: scf__dft_pruning_scheme.rst
.. include:: scf__dft_radial_points.rst
.. include:: scf__dft_radial_scheme.rst
.. include:: scf__dft_spherical_points.rst
.. include:: scf__dft_spherical_scheme.rst
.. include:: scf__dft_v2_rho_cutoff.rst
.. include:: scf__dft_vv10_b.rst
.. include:: scf__dft_vv10_c.rst
.. include:: scf__dft_vv10_postscf.rst
.. include:: scf__dft_vv10_radial_points.rst
.. include:: scf__dft_vv10_spherical_points.rst
.. include:: scf__local_convergence.rst
.. include:: scf__local_maxiter.rst
.. include:: scf__nl_dispersion_parameters.rst
.. include:: scf__save_uhf_nos.rst
.. include:: scf__uhf_noons.rst

.. _`apdx:scftdscf`:

TDSCF 
_____

.. include:: scf__tdscf_coeff_cutoff.rst
.. include:: scf__tdscf_guess.rst
.. include:: scf__tdscf_maxiter.rst
.. include:: scf__tdscf_print.rst
.. include:: scf__tdscf_r_convergence.rst
.. include:: scf__tdscf_states.rst
.. include:: scf__tdscf_tda.rst
.. include:: scf__tdscf_tdm_print.rst
.. include:: scf__tdscf_triplets.rst
.. include:: scf__wcombine.rst


.. _`apdx:scfegeneralwavefunctioninfo`:

*Expert* General Wavefunction Info 
__________________________________

.. include:: scf__pk_algo.rst
.. include:: scf__pk_all_nonsym.rst
.. include:: scf__pk_max_buckets.rst
.. include:: scf__pk_no_incore.rst
.. include:: scf__wfn.rst

.. _`apdx:scfeconvergencecontrolstabilization`:

*Expert* Convergence Control/Stabilization 
__________________________________________

.. include:: scf__follow_step_increment.rst
.. include:: scf__follow_step_scale.rst
.. include:: scf__max_attempts.rst

.. _`apdx:scfeparallelruntime`:

*Expert* Parallel Runtime 
_________________________

.. include:: scf__distributed_matrix.rst
.. include:: scf__parallel.rst
.. include:: scf__process_grid.rst
.. include:: scf__tile_sz.rst

.. _`apdx:scfemisc`:

*Expert* Misc. 
______________

.. include:: scf__sapt.rst

.. _`apdx:scfedfscfalgorithm`:

*Expert* DFSCF Algorithm 
________________________

.. include:: scf__df_fitting_condition.rst
.. include:: scf__df_ints_io.rst

.. _`apdx:scfesadguessalgorithm`:

*Expert* SAD Guess Algorithm 
____________________________

.. include:: scf__df_basis_sad.rst
.. include:: scf__sad_chol_tolerance.rst
.. include:: scf__sad_frac_occ.rst
.. include:: scf__sad_maxiter.rst
.. include:: scf__sad_print.rst
.. include:: scf__sad_scf_type.rst
.. include:: scf__sad_spin_average.rst

.. _`apdx:scfedft`:

*Expert* DFT 
____________

.. include:: scf__dft_block_max_points.rst
.. include:: scf__dft_block_max_radius.rst
.. include:: scf__dft_block_min_points.rst
.. include:: scf__dft_block_scheme.rst
.. include:: scf__dft_density_tolerance.rst
.. include:: scf__dft_grac_c_func.rst
.. include:: scf__dft_grac_x_func.rst
.. include:: scf__dft_grid_name.rst
.. include:: scf__dft_pruning_alpha.rst
.. include:: scf__dft_vv10_rho_cutoff.rst
.. include:: scf__dft_weights_tolerance.rst

